<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.xigua</groupId>
    <artifactId>xigua-cloud</artifactId>
    <version>1.0</version>
    <name>xigua-cloud</name>
    <description>xigua</description>
    <packaging>pom</packaging>

    <!-- 版本   -->
    <properties>
        <xigua.version>1.0</xigua.version>
        <java.version>17</java.version>
        <spring-cloud.version>2023.0.1</spring-cloud.version>
        <spring-cloud-alibaba.version>2023.0.1.0</spring-cloud-alibaba.version>
        <mybatis.version>3.0.3</mybatis.version>
        <mybatis-plus.version>3.5.9</mybatis-plus.version>
        <mysql.version>8.3.0</mysql.version>
        <bootstrap.version>4.1.2</bootstrap.version>
        <fastjson2.version>2.0.53</fastjson2.version>
        <ttl.version>2.14.5</ttl.version>
        <dubbo.version>3.3.0</dubbo.version>
        <guava.version>33.4.0-jre</guava.version>
        <openapi.version>2.6.0</openapi.version>
        <jwt.version>4.5.0</jwt.version>
        <redisson.version>3.35.0</redisson.version>
        <druid.version>1.2.23</druid.version>
        <kotlin.version>1.8.21</kotlin.version>
        <minio.version>8.5.17</minio.version>
        <okhttp.version>4.12.0</okhttp.version>
        <lang3.version>3.17.0</lang3.version>
        <collections4.version>4.5.0</collections4.version>
        <os.maven.plugin.version>1.7.1</os.maven.plugin.version>
        <protoc.version>3.19.6</protoc.version>
        <grpc.version>1.63.0</grpc.version>
        <beanutils.version>1.11.0</beanutils.version>
    </properties>

    <!-- 模块   -->
    <modules>
        <module>xigua-gateway</module>
        <module>xigua-api</module>
        <module>xigua-common</module>
        <module>xigua-domain</module>
        <module>xigua-client</module>
        <module>xigua-center</module>
        <module>xigua-ai</module>
    </modules>

    <profiles>
        <profile>
            <id>local</id>
            <properties>
                <!-- 本地 -->
                <profiles.active>local</profiles.active>
                <nacos.username>nacos</nacos.username>
                <nacos.password>nacos</nacos.password>
                <nacos.server>127.0.0.1:8848</nacos.server>
            </properties>
            <activation>
                <!-- 默认环境 -->
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <profile>
            <id>dev</id>
            <properties>
                <!-- 远程 -->
                <profiles.active>dev</profiles.active>
                <nacos.username>nacos</nacos.username>
                <nacos.password>nacos</nacos.password>
                <nacos.server>x.x.x.x:8848</nacos.server>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <!-- cloud项目的最外层 尽量通过dependencyManagement引入依赖，这样是因为子模块引哪个加载哪个，而不会在子模块都引用   -->
    <dependencyManagement>
        <dependencies>
            <!-- https://mvnrepository.com/artifact/com.alibaba.cloud/spring-cloud-alibaba-dependencies -->
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-dependencies -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

                <!--
                    不引入dubbo3的Management了，和xxl-job不太适配
                    dubbo3中的spring-context-support引入的是5.3.39，引入后会把全局的改成5.3，springboot3默认的是6.1.6
                    是因为dubbo3还要兼容springboot2，本项目和xxl-job都是springboot3，只能单个引入dubbo的依赖
                    spring-boot-starter-parent -> spring-boot-dependencies -> spring-boot-starter-mail -> spring-context-support（6.1.6）
                -->
<!--            &lt;!&ndash; https://mvnrepository.com/artifact/org.apache.dubbo/dubbo-bom &ndash;&gt;-->
<!--            <dependency>-->
<!--                <groupId>org.apache.dubbo</groupId>-->
<!--                <artifactId>dubbo-bom</artifactId>-->
<!--                <version>3.3.0</version>-->
<!--                <type>pom</type>-->
<!--                <scope>import</scope>-->
<!--            </dependency>-->

<!--            <dependency>-->
<!--                <groupId>org.springframework</groupId>-->
<!--                <artifactId>spring-context-support</artifactId>-->
<!--                <version>6.1.6</version>  &lt;!&ndash; 覆盖 Dubbo BOM 的版本 &ndash;&gt;-->
<!--            </dependency>-->
        </dependencies>
    </dependencyManagement>

    <build>
        <extensions>
            <!-- 检测系统类型，自动填充 ${os.detected.classifier} -->
            <extension>
                <groupId>kr.motd.maven</groupId>
                <artifactId>os-maven-plugin</artifactId>
                <version>${os.maven.plugin.version}</version>
            </extension>
        </extensions>

        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>

            <!-- 生成grpc代码插件-->
            <plugin>
                <groupId>org.xolstice.maven.plugins</groupId>
                <artifactId>protobuf-maven-plugin</artifactId>
                <version>0.6.1</version>
                <configuration>
                    <protocArtifact>com.google.protobuf:protoc:${protoc.version}:exe:${os.detected.classifier}</protocArtifact>
                    <pluginId>grpc-java</pluginId>
                    <pluginArtifact>io.grpc:protoc-gen-grpc-java:${grpc.version}:exe:${os.detected.classifier}</pluginArtifact>
                    <protocPlugins>
                        <!-- 生成dubbo3的triple代码 -->
                        <protocPlugin>
                            <id>dubbo</id>
                            <groupId>org.apache.dubbo</groupId>
                            <artifactId>dubbo-compiler</artifactId>
                            <version>${dubbo.version}</version>
                            <mainClass>org.apache.dubbo.gen.tri.reactive.ReactorDubbo3TripleGenerator</mainClass>
                        </protocPlugin>
                    </protocPlugins>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <!-- 关闭过滤 -->
                <filtering>false</filtering>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <!-- 引入所有 匹配文件进行过滤 -->
                <includes>
                    <include>application*</include>
                    <include>bootstrap*</include>
                    <include>logback*</include>
                    <include>**/*.p12</include>
                </includes>
                <!-- 启用过滤 即该资源中的变量将会被过滤器中的值替换 -->
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

</project>
